--- a/HotelCompass/HotelCompass-Info.plist
+++ b/HotelCompass/HotelCompass-Info.plist
@@ -38,5 +38,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <true/>
 </dict>
 </plist>
